--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 3,
   "name": "SlideMaster",
   "version": "1.0",
+  "author": "Robinson J",
 
   "description": "Have control over Google Slides",
   "homepage_url": "https://github.com/CodesWithRobi/SlideMaster",
@@ -16,7 +17,7 @@
   "permissions": ["activeTab", "scripting"],
   "content_scripts": [
     {
-      "matches": ["https://docs.google.com/presentation/*"],
+      "matches": ["*://docs.google.com/presentation/d/*"],
       "js": ["app.js"]
     }
   ],
